--- a/core-test/CMakeLists.txt
+++ b/core-test/CMakeLists.txt
@@ -4,9 +4,15 @@ set(APP_NAME "core-test")
 
 project(${APP_NAME} LANGUAGES CXX)
 
+find_package(GTest CONFIG REQUIRED)
+
 add_executable(${APP_NAME}
 	src/core-test.cpp)
 
 target_link_libraries(${APP_NAME}
-	core-functionality)
+	core-functionality
+	GTest::gtest
+	GTest::gtest_main)
+
+add_test(NAME CoreTest COMMAND ${APP_NAME})
 
